--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -75,9 +75,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriaRepository.cs" />
     <Compile Include="DAL_Conexion.cs" />
     <Compile Include="DAL_Repository.cs" />
+    <Compile Include="LaboratorioRepository.cs" />
+    <Compile Include="LoteRepository.cs" />
+    <Compile Include="ProductoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProveedorRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entity\Entity.csproj">
