--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoteProducto.cs" />
+    <Compile Include="Categoria.cs" />
+    <Compile Include="Laboratorio.cs" />
+    <Compile Include="Lote.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
