--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BLL_Services.cs" />
     <Compile Include="CategoriaService.cs" />
+    <Compile Include="ICrud.cs" />
     <Compile Include="LaboratorioService.cs" />
     <Compile Include="LoteService.cs" />
     <Compile Include="ProductoService.cs" />
