--- a/Entity/Entity.csproj
+++ b/Entity/Entity.csproj
@@ -42,11 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="DetalleVenta.cs" />
     <Compile Include="Laboratorio.cs" />
     <Compile Include="Lote.cs" />
     <Compile Include="Producto.cs" />
+    <Compile Include="ProductoVendido.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
+    <Compile Include="Venta.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
